# ETTK

./: .gitignore  KITTI_sequence_2.html  LICENSE  README.md  pyproject.toml  setup.cfg  setup.py
.dvc/: config
.github/workflows/: deploy.yml  doc.yml
docs/: conf.py  getting_started.rst  index.rst
docs/usage/: index.rst
et3d/: KITTI_sequence_2.html  __init__.py  inertial_odometry.py  utils.py  video.py  visual_odometry.py
ettk/: __init__.py  homography.py  object_tracking.py  planar_tracking.py  planer_tracking.py  seg_tracking.py  template_database.py  tg3.py  types.py
ettk/analysis/: scanpath_graph.py
ettk/cp_plugin/: __init__.py  tg3.py
ettk/processing/: __init__.py  aruco_tracker.py  homography_kalman_filter.py  homography_refiner.py  hough_refiner.py  object_tracking.py  planar_tracker.py  planar_tracking.py  seg_tracking.py  surface_config.py  template_database.py
ettk/processing/filters/: __init__.py  pose_kalman_filter.py  rotation_vector_kalman_filter.py
ettk/utils/: __init__.py  preprocessing.py  threed.py  tobii.py  tools.py  vis.py
test/: conftest.py  data.dvc  surface_configs.py  test_3d_reconstruction.py  test_aruco_tracker.py  test_corner_detector.py  test_homography.py  test_homography_refiner.py  test_object_detection.py  test_optical_flow_tracking.py  test_planar_tracker.py  test_planar_tracking.py  test_planer_tracking.py  test_pose_kalman_filter.py  test_segmentation.py  test_tg3.py  test_tobii.py  tg3.py
test/config/: demo.yaml  tobii_camera.yaml
test/data/tobii_rec1_v3/: imudata.csv  meta.yaml
test/output/: computer_video.avi  paper_video.avi  planar_tracking.csv
tests/data/odometry/: test_mono_visual.py
tests/data/tobii_rec1_v3/: gazedata.csv  recording.g3
tests/data/tobii_rec1_v3/meta/: HuSerial  RuSerial  RuVersion  participant
tests/odometry/: test_inertial.py  test_mono_visual.py
